apps/app-proxy/overlays/csdp-september/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csdp-september-cap-app-proxy
  namespace: csdp-september
spec:
  ingressClassName: nginx
  rules:
  - host: rozario-demo.sa.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
